--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,8 @@
 
 @layer utilities {
   .section-min-height {
-    min-height: calc(100vh - 76px);
+    /*min-height: calc(100vh - 76px);*/
+    min-height: calc(100vh - 105px);
   }
 }
 
@@ -42,3 +43,9 @@ body {
   }
 }
 */
+
+@layer utilities {
+  .mask {
+    mask: linear-gradient(black 0%, black 60%, transparent 100%);
+  }
+}
