--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,10 @@
 /* @import url("https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap");
  * */
 
+@layer components {
+  .scroll-top: scr;
+}
+
 @layer utilities {
   .section-min-height {
     /*min-height: calc(100vh - 76px);*/
